# teerun

client/: CMakeLists.txt
client/src/: main.c
server/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  valgrind.supp
server/src/: game-server.c  game-server.h  main.c
server/tests/: game-server-test.c
web-backend/: app.js  package.json
web-backend/src/: game-server.js  map.js  player.js
web-frontend/: app.js  package.json
web-frontend/public/: index.html  index.js
